--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/Mello-Davi/TarefaPrimeiraSemanaNodeJS#readme",
   "dependencies": {
-    "fastify": "5.7.4"
+    "dotenv": "17.2.4",
+    "fastify": "5.7.4",
+    "zod": "4.3.6"
   },
   "devDependencies": {
     "@types/node": "25.2.3",
