--- a/.env.exemple
+++ b/.env.exemple
@@ -1,8 +1,12 @@
-NODE_ENV = development
-PORT = 3333
-HOST = "0.0.0.0"
+NODE_ENV=development
+PORT=3333
+HOST="0.0.0.0"
 
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=dn23l1n10afishndl1
+POSTGRES_PASSWORD=
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
+
+DATABASE_URL="postgresql://postgres:dn23l1n10afishndl1@localhost:5432/postgres?schema=public"
+
+HASH_SALT_ROUNDS=12
