feat: autenticação de usuário

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ POSTGRES_PORT=5432
 DATABASE_URL="postgresql://postgres:dn23l1n10afishndl1@localhost:5432/postgres?schema=public"
 
 HASH_SALT_ROUNDS=12
+
+JWT_SECRET="awndoiawnd12nif"
